[1.1.1] Fixed bug in plotAmpliconCoverage().
[1.1.2] Added method for calculating Ti/Tv ratios.
[1.3.1] Added method readSFF to read-in Roche's .sff (Standard Flowgram Format) files
        Added functions for quality control on unaligned sequences in SFFContainer, ShortReadQ and
          QualityScaledDNAStringSet format